# composer-utilities

./: .gitignore  .repo-metadata.json  CONTRIBUTING.rst  README.md  README.rst  owlbot.py  renovate.json
.github/: .OwlBot.lock.yaml  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  header-checker-lint.yml  sync-repo-settings.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cloudcomposerdiff.yml  composer_migration.yml  control_panel.yml  environment_diff.yml  migration_gen1_to_gen2.yml
.kokoro/: build.sh  release.sh
.kokoro/continuous/: common.cfg
.kokoro/docs/: common.cfg  docs-presubmit.cfg
.kokoro/release/: common.cfg
.kokoro/samples/lint/: common.cfg
.kokoro/samples/python3.10/: common.cfg
.kokoro/samples/python3.7/: common.cfg
.kokoro/samples/python3.8/: common.cfg
.kokoro/samples/python3.9/: common.cfg  periodic-head.cfg
cloudcomposerdiff/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
cloudcomposerdiff/src/cloudcomposerdiff/: __init__.py  __main__.py
cloudcomposerdiff/src/cloudcomposerdiff/lib/: __init__.py  comparator.py  difference.py  service.py
cloudcomposerdiff/src/cloudcomposerdiff/lib/strategies/: diff_airflow_config.py  diff_env_image.py  diff_env_variables.py  diff_pypi_packages.py  diffairflowconfig.py  diffenvimage.py  strategy.py
cloudcomposerdiff/tests/: test_diff_airflow_config.py  test_diff_env_image.py  test_diff_env_variables.py  test_diff_pypi_packages.py  test_diffenvimage.py  test_service.py
composer_migration/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
composer_migration/src/composer_migration/: __main__.py
composer_migration/src/composer_migration/lib/: comparator.py
composer_migration/src/composer_migration/lib/strategies/: migrate_kubernetes_pod_operator_ast.py  strategy.py
composer_migration/test_resources/: airflow_db_cleanup.py  gke_operator_airflow_1.py  hadoop_tutorial.py  kubernetes_pod_operator_airflow_1.py  kubernetes_pod_operator_airflow_1_no_affinity.py
composer_migration/tests/: comparator_test.py  migrate_kubernetes_pod_operator_ast_test.py
composer_parsing_profiler/: dag_linter_kubernetes_pod.py
control_panel/: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  package-lock.json  package.json  proxy_server.py  pyproject.toml  requirements.txt  start_servers.sh
control_panel/public/: index.html  robots.txt
control_panel/src/: App.css  App.js  App.test.js  apiEndpoints.js  index.css  index.js  reportWebVitals.js  setupTests.js
control_panel/src/api/: axios.js
control_panel/src/components/: DagEditView.js  DagEditView.test.js  EndpointView.js  EndpointView.test.js  MonacoEditor.js  Sidebar.js  Sidebar.test.js
control_panel/src/context/: EnvironmentContext.js  EnvironmentContext.test.js  ThemeContext.js
control_panel/test_scripts/: conftest.py  test_auth.py  test_env.py  test_list_envs.py  test_locations.py  test_proxy_server.py
dag_parsing_profiler/: dag_linter_kubernetes_pod.py  linter_core.py
dags/: airflow_moved_tables.py  conftest.py  requirements.txt
docs/: conf.py  index.rst
environment_diff/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
environment_diff/src/environment_diff/: __init__.py  __main__.py
environment_diff/src/environment_diff/lib/: comparator.py  difference.py
environment_diff/src/environment_diff/lib/strategies/: diff_airflow_config.py  diff_env_image.py  diff_env_variables.py  diff_pypi_packages.py  strategy.py
environment_diff/tests/: test_diff_airflow_config.py  test_diff_env_image.py  test_diff_env_variables.py  test_diff_pypi_packages.py
migration/: CONTRIBUTING.md
migration/gen1_to_gen2/: pyproject.toml  requirements.txt
migration/gen1_to_gen2/src/composer_migration/: __main__.py
migration/gen1_to_gen2/src/composer_migration/lib/: comparator.py
migration/gen1_to_gen2/src/composer_migration/lib/strategies/: migrate_kubernetes_pod_operator_ast.py  strategy.py
migration/gen1_to_gen2/test_resources/: airflow_db_cleanup.py
migration/gen1_to_gen2/tests/: comparator_test.py  migrate_kubernetes_pod_operator_ast_test.py
skills/authoring-composer-dags/: SKILL.md
