[project]
name = "composer-control-panel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2023.5.7",
    "fastapi>=0.111.0",
    "google-api-python-client>=2.84.0",
    "google-auth>=2.17.3",
    "google-cloud-storage>=2.8.0",
    "gunicorn>=21.2.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "ruff",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ruff"
]

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
pythonpath = ["."]

