# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "composer-control-panel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2023.5.7",
    "fastapi>=0.111.0",
    "google-api-python-client>=2.84.0",
    "google-auth>=2.17.3",
    "google-cloud-storage>=2.8.0",
    "gunicorn>=21.2.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "ruff",
    "pytest",
    "pyopenssl",
]


[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ruff"
]

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
pythonpath = ["."]

