[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "environment_diff"
version = "1.1.0"
description = "Determine the diff between two Cloud Composer environments"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-orchestration-airflow",
    "click",
    "rich",
]

[project.scripts]
environment_diff = "environment_diff.__main__:main"

[project.optional-dependencies]
dev = [
    "bumpver", 
    "mypy",
    "pip-tools", 
    "pytest", 
    "ruff"
]

[tool.bumpver]
current_version = "1.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/environment_diff/__init__.py" = ["{version}"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "ANN", "C90"]
ignore = [
    "E501",  # line-too-long
]

[tool.ruff.lint.mccabe]
max-complexity = 29