[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "composer_migration"
version = "1.0.0"
description = "Check DAGs for compatibility with Composer 2"
requires-python = ">=3.9"
dependencies = [
    "google-api-core",
    "google-cloud-orchestration-airflow",
    "rich",
]

[project.scripts]
composer_migration = "composer_migration.migration:main"

[project.optional-dependencies]
dev = [
    "bumpver", 
    "mypy",
    "pip-tools", 
    "pytest", 
    "ruff"
]

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/composer_migration/__init__.py" = ["{version}"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "ANN", "C90"]
ignore = [
    "E501",  # line-too-long
]

[tool.ruff.lint.mccabe]
max-complexity = 29